[package]
name = "bn254_hash2curve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = "0.4.0"
sha2 = "0.10.6"
digest = "0.10.7"
crypto-bigint = "0.5.2"
ark-ff = "0.4.2"
num-bigint = "0.4.3"
hex = "0.4.3"
num-integer = "0.1.45"
elliptic-curve = "0.13.5"
subtle = "2.5.0"
ark-ec = "0.4.2"
ark-std = "0.4.0"