[package]
name = "bn254_hash2curve"
version = "0.1.1"
edition = "2021"
authors = ["Manish <https://github.com/man2706kum>", "HashCloak <https://github.com/hashcloak>"]
description = "hash-to-curve for the BN254 elliptic curve"
readme = "README.md"
repository = "https://github.com/hashcloak/bn254-hash-to-curve"
license = "MIT AND Apache-2.0"
keywords = ["cryptography", "elliptic_curves", "hash-to-curve", "hashing", "bn254"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = "0.4.0"
sha2 = "0.10.6"
digest = "0.10.7"
ark-ff = "0.4.2"
num-bigint = "0.4.3"
hex = "0.4.3"
num-integer = "0.1.45"
elliptic-curve = "0.13.5"
subtle = "2.5.0"
ark-ec = "0.4.2"

[dev-dependencies]
constantine-sys = { git = "https://github.com/mratsim/constantine.git", rev = "26109ad4e2ea4b1d6288ffd528b0731a008418c2" }

[features]
default = ["constantine_compatible"]
constantine_compatible = []
gnark_crypto_compatible = []
